JAVA-3567: Add support for records