@@ -79,8 +79,8 @@ configure(coreProjects) {
 configure(javaProjects) {
     apply plugin: 'java-library'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_15
+    targetCompatibility = JavaVersion.VERSION_15
 
     sourceSets {
         main {
@@ -101,8 +101,8 @@ configure(scalaProjects) {
 
     group = 'org.mongodb.scala'
 
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_15
+    targetCompatibility = JavaVersion.VERSION_15
 
     dependencies {
         compile ('org.scala-lang:scala-library:%scala-version%')
@@ -150,25 +150,28 @@ configure(scalaProjects) {
 configure(javaMainProjects) {
     apply plugin: 'nebula.optional-base'
     apply plugin: 'java-library'
-    
     dependencies {
         compileOnly 'com.google.code.findbugs:jsr305:1.3.9'
         api 'org.slf4j:slf4j-api:1.7.6', optional
         testImplementation 'com.google.code.findbugs:jsr305:1.3.9'
     }
-
     /* Compiling */
     tasks.withType(AbstractCompile) {
         options.encoding = 'ISO-8859-1'
         options.fork = true
         options.debug = true
-        options.compilerArgs = ['-Xlint:all']
+        options.compilerArgs = ['-Xlint:all', '--enable-preview']
+    }
+    test {
+        jvmArgs(['--enable-preview'])
     }
 }
 
 configure(javaAndScalaTestedProjects) {
     /* Testing */
     tasks.withType(Test) {
+        jvmArgs(['--enable-preview'])
+
         systemProperties(
                 'org.mongodb.test.uri': System.getProperty('org.mongodb.test.uri'),
                 'org.mongodb.test.transaction.uri': System.getProperty('org.mongodb.test.transaction.uri'),
@@ -250,6 +253,7 @@ configure(javaCodeCheckedProjects) {
     sourceSets {
         test {
             groovy.srcDirs = ['src/test/functional', 'src/test/unit']
+            java.srcDirs = ['src/test/functional', 'src/test/unit']
         }
     }
 
